# autoSkill

./: .gitignore  LICENSE  README.md  SKILL.md  example.py  mcp_workflow_demo.py  pyproject.toml  test.py  tests.py
examples/: http_client.py  sdk_basic.py  sdk_streaming.py
skill_agent/: __init__.py  agent.py  cli.py  config.py  docker_executor.py  embeddings.py  events.py  executor.py  http_server.py  inspector.py  llm.py  mcp_http_server.py  mcp_server.py  permissions.py  recognizer.py  requirements.txt  reviser.py  tool_registry.py  tool_writer.py  validator.py
skill_agent/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  ollama_provider.py  openai_provider.py
